[tool.poetry]
name = "ambientVJ"
version = "0.1.0"
description = ""
authors = ["santa-sukitoku <santanaruse@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.2"
tensorflow-gpu = "^2.1.0"
keras = "^2.3.1"
librosa = "^0.7.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.7.9"

[tool.poetry.scripts]
ambientVJ = "ambientVJ:main"